# tf2_data_vis

./: .gitignore  NEW PER.ipynb  OLD PER Modeling.ipynb  TF2 stats project.txt  create_datasets.py  data manips.ipynb  data.ipynb  data.py  datasets for vis.ipynb  index.html  requirements.txt  testing_class.ipynb
codebase/: binning.ipynb  datasets for vis.ipynb  main.py  meeting.ipynb  pyproject.toml  test.py  tier.ipynb
codebase/tf2_data_vis.egg-info/: PKG-INFO
codebase/tf2_data_vis/get_log_data/: batch.py  bind_logs.py  filter_log_ids.py  get_log_data.py  manipulate_logs.py  request_log_data.py  request_log_ids.py  save_batch.py  save_data.py
codebase/tf2_data_vis/log_manipulation/: create_datasets.py  log.py  player_cols.py  team_cols.py
codebase/tf2_data_vis/model_prep/: bin_map_adjust_X.py  drop_bad_predictors.py  make_X_y.py  manipulate_raw_data.py  merge_wide_data.py  model_prep.py  model_ready_data.py  read_data.py  rename_scout_soldier.py  short_matches.py  split_combat_medic.py  team_class_comp.py  widen_data.py
codebase/tf2_data_vis/modeling/: make_PIM_long.py  make_data_model_ready.py  model_summary.py  modeling.py  shap_explain_PIM.py  xgboost_modeling.py
codebase/tf2_data_vis/player_division/: player_division.py  request_rgl.py  steamid.py
codebase/tf2_data_vis/team_division/: merge_onto_players.py  read_log_data.py  request_rgl.py  sixes_teams.py  steamid.py  team_division.py
codebase/tf2_data_vis/vis_prep/: clean_map_name.py  fix_push_stats.py  koth_fix.py  long_datasets.py  players_quantile.py  valid_ids_to_csv.py  vis_prep.py
(+50 files in other folders)
